--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,9 @@ scikit_learn==1.5.2
 scipy==1.14.1
 statsmodels==0.14.4
 tabulate==0.8.10
-torch==2.5.1+cu121
+torch==2.5.1
+torchvision==0.20.1
+torchaudio==2.5.1
 xgboost==2.1.3
 xlstm==2.0.0
+--extra-index-url https://download.pytorch.org/whl/cu121
